--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-no-type-assertion",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Disallow type assertions in TypeScript code",
   "main": "lib/index.js",
   "files": [
@@ -19,7 +19,7 @@
     "yarn": "^1.13.0"
   },
   "scripts": {
-    "test": "mocha tests --recursive",
+    "test": "jest tests",
     "prettier": "prettier --check \"{lib,test}/**/*.js\""
   },
   "peerDependencies": {
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@typescript-eslint/parser": "^3.0.0",
     "eslint": "^7.0.0",
-    "mocha": "^7.1.2",
+    "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "typescript": "^3.9.3"
   }
