--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "prettier": "prettier --check \"{lib,test}/**/*.js\""
   },
   "peerDependencies": {
-    "eslint": "^7.0.0"
+    "eslint": "^7.0.0 || ^8.0.0"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^3.0.0",
-    "eslint": "^7.0.0",
-    "jest": "^26.0.1",
-    "prettier": "^2.0.5",
-    "typescript": "^3.9.3"
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
+    "jest": "^27.3.1",
+    "prettier": "^2.5.0",
+    "typescript": "^4.5.2"
   }
 }
